# transcription-tools

./: .gitignore  README.md  giant-ass-table.py  initial-setup.sh  table.csv  to.py  tree.py
graph/: graph.py  micro.json
ocr/: README.md
ocr/braille-diagram-tools/: Cargo.toml
timing-diagram/: diagram.py  test.au
tree/: README.md  data.py  tree.py
