[package]
name = "braille-diagram-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptess = "^0.13.1"
ocr-json-common = { path = "../ocr-json-common" }
serde_json = "^1.0"
imageproc = "^0.22.0"
image = "^0.23.14"
louis = { git = "https://github.com/TTWNO/liblouis-rust" }
rusttype = "^0.9.2"
text_io = "^0.1.9"
